--- a/libs/collage/CMakeLists.txt
+++ b/libs/collage/CMakeLists.txt
@@ -7,7 +7,7 @@
 
 set(CO_VERSION_MAJOR "0")
 set(CO_VERSION_MINOR "4")
-set(CO_VERSION_SUB "0")
+set(CO_VERSION_PATCH "0")
 set(CO_VERSION ${CO_VERSION_MAJOR}.${CO_VERSION_MINOR}.${CO_VERSION_PATCH})
 
 include(files.cmake)
