Sequel: create separate configs for app and client: - separates register vs map/sync implementation - hold object map
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[x] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/sequel/CMakeLists.txt
+++ b/libs/sequel/CMakeLists.txt
@@ -14,10 +14,15 @@ purple_add_library(Sequel SHARED
     application.cpp
     error.cpp
     detail/application.cpp
+    detail/config.h
+    detail/masterConfig.h
+    detail/masterConfig.cpp
     detail/node.h
     detail/node.cpp
     detail/objectMap.h
     detail/objectMap.cpp
+    detail/slaveConfig.h
+    detail/slaveConfig.cpp
   LINK_LIBRARIES Equalizer
   )
 set_target_properties(lib_Sequel_shared PROPERTIES
