Sequel: Template pipe class
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[x] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/sequel/CMakeLists.txt
+++ b/libs/sequel/CMakeLists.txt
@@ -21,6 +21,8 @@ purple_add_library(Sequel SHARED
     detail/node.cpp
     detail/objectMap.h
     detail/objectMap.cpp
+    detail/pipe.h
+    detail/pipe.cpp
     detail/slaveConfig.h
     detail/slaveConfig.cpp
   LINK_LIBRARIES Equalizer
