Sequel: Template channel class
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[x] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/sequel/CMakeLists.txt
+++ b/libs/sequel/CMakeLists.txt
@@ -14,6 +14,8 @@ purple_add_library(Sequel SHARED
     application.cpp
     error.cpp
     detail/application.cpp
+    detail/channel.h
+    detail/channel.cpp
     detail/config.h
     detail/masterConfig.h
     detail/masterConfig.cpp
