--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,10 @@ option(EQUALIZER_NIGHTLY "Package nightly builds" OFF)
 option(EQUALIZER_USE_SOLUTION_FOLDERS "Enable project grouping in IDE" ON)
 option(EQUALIZER_BUILD_TESTS "Build Equalizer unit tests." ON)
 option(EQUALIZER_BUILD_EXAMPLES "Build Equalizer examples." ON)
-option(EQUALIZER_INSTALL_SERVER_HEADERS "Install Equalizer server includes." OFF)
+option(EQUALIZER_INSTALL_SERVER_HEADERS
+  "Install Equalizer server includes." OFF)
+option(EQUALIZER_BUILD_2_0_API
+  "Enable for pure 2.0 API (breaks compatibility with 1.0 API)" OFF)
 
 set(EQUALIZER_RELEASE OFF)
 set(EQUALIZER_PACKAGE_VERSION "" CACHE STRING "Additional version for packages")
@@ -227,6 +230,9 @@ if(EQUALIZER_RELEASE)
   else()
     set(EQ_DEFINITIONS ${EQ_DEFINITIONS} -DEQ_INSTALL_DIR="${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/")
   endif()
+endif()
+if(EQUALIZER_BUILD_2_0_API)
+  set(EQ_DEFINITIONS ${EQ_DEFINITIONS} -DEQ_2_0_API)
 endif()
 add_definitions(${EQ_DEFINITIONS})
 
