CMake: remove obsolete _EXPORTS defines
[x] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/client/CMakeLists.txt
+++ b/libs/client/CMakeLists.txt
@@ -22,7 +22,7 @@ if(NOT EQUALIZER_BUILD_MODULARIZED)
   list(APPEND EQ_LIB_VARIANT EXCLUDE_FROM_ALL)
 endif(NOT EQUALIZER_BUILD_MODULARIZED)
 
-add_definitions(-DEQ_EXPORTS -DEQ_PLUGIN_BUILD)
+add_definitions(-DEQ_PLUGIN_BUILD)
 
 if(APPLE)
   if(EQ_AGL_USED)
