OpenGL context sharing example (async texture handling)
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[ ] Documentation

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -49,4 +49,5 @@ add_subdirectory(eqNBody)
 add_subdirectory(eqPixelBench)
 add_subdirectory(eqPly)
 add_subdirectory(eVolve)
+add_subdirectory(eqAsync)
 add_subdirectory(osgScaleViewer)
