Sequel: wire Renderer::draw
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[x] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/examples/seqPly/CMakeLists.txt
+++ b/examples/seqPly/CMakeLists.txt
@@ -33,8 +33,9 @@ eq_add_example(seqPly
   SOURCES
     main.cpp
     renderer.h
-    seqPly.cpp
+    renderer.cpp
     seqPly.h
+    seqPly.cpp
     ${KD_SOURCES}
   LINK_LIBRARIES
     shared Sequel
