Cleanup and full screen on OSX shared context creation fix.
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[x] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[ ] Documentation

--- a/examples/eqAsync/CMakeLists.txt
+++ b/examples/eqAsync/CMakeLists.txt
@@ -9,12 +9,14 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 eq_add_example(eqAsync
   HEADERS
-    eqAsync.h
+    aglWindowShared.h
     asyncFetcher.h
+    eqAsync.h
   SOURCES
     main.cpp
-    eqAsync.cpp
     asyncFetcher.cpp
+    eqAsync.cpp
+    aglWindowShared.cpp
   LINK_LIBRARIES
     Equalizer
     shared EqualizerAdmin
