Sequel: Make FrameData work in example: - Reuse eqPly FrameData in seqPly - Factory methods for FrameData - Cleanup properly in ObjectMap dtor - Simplify locking in ObjectMap - Serialize object types in ObjectMap
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[x] Bugfix
[x] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/examples/seqPly/CMakeLists.txt
+++ b/examples/seqPly/CMakeLists.txt
@@ -36,6 +36,8 @@ eq_add_example(seqPly
     renderer.cpp
     seqPly.h
     seqPly.cpp
+    ../eqPly/frameData.h
+    ../eqPly/frameData.cpp
     ${KD_SOURCES}
   LINK_LIBRARIES
     shared Sequel
