created branch tile
loader support for tile queues + test config + unit test
dummy tile queue class proxy

[ ] May break build
[ ] Breaks existing applications
[ ] Bugfix
[x] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/server/CMakeLists.txt
+++ b/libs/server/CMakeLists.txt
@@ -39,6 +39,7 @@ set(SERVER_HEADERS
     server.h
     state.h
     swapBarrier.h
+    tileQueue.h
     types.h
     view.h
     visitorResult.h
@@ -111,6 +112,7 @@ set(SERVER_SOURCES
     serverVisitor.h
     startLocalServer.cpp
     swapBarrier.cpp
+    tileQueue.cpp
     view.cpp
     window.cpp
 )
