--- a/libs/fabric/CMakeLists.txt
+++ b/libs/fabric/CMakeLists.txt
@@ -8,4 +8,6 @@ purple_add_library(EqualizerFabric STATIC EXCLUDE_FROM_ALL
   FORWARD HEADERS ${EQ_FABRIC_FORWARD_HEADERS}
   SOURCES ${EQ_FABRIC_SOURCES} ${EQ_FABRIC_HEADERS}
   )
+set_target_properties(lib_EqualizerFabric_static PROPERTIES
+  FOLDER "Libraries" PROJECT_LABEL "Fabric")
 add_dependencies(lib_EqualizerFabric_static Collage) # need forwards, static lib
