--- a/examples/eqPly/CMakeLists.txt
+++ b/examples/eqPly/CMakeLists.txt
@@ -69,7 +69,7 @@ eq_add_example(eqPly
     vertexShader.glsl
     fragmentShader.glsl
   LINK_LIBRARIES
-    Equalizer EqualizerAdmin
+    ${EQUALIZER_ADMIN_LIBRARY}
   )
 
 source_group(kdTree FILES ${KD_HEADERS} ${KD_SOURCES})
