Minor CMake beautification
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/server/CMakeLists.txt
+++ b/libs/server/CMakeLists.txt
@@ -134,4 +134,5 @@ endif()
 
 set_target_properties(lib_EqualizerServer_shared PROPERTIES
   FOLDER "Libraries" PROJECT_LABEL "Server")
-source_group(\\ REGULAR_EXPRESSION .*)
+source_group(equalizers REGULAR_EXPRESSION equalizers.*)
+source_group(\\ FILES CMakeLists.txt ${SERVER_HEADERS} ${SERVER_SOURCES})
