Start implementing local auto-configuration: - GPU discovery stub in UIFactory - GPU discovery on AGL - Server-side resource and display configuration
[x] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[x] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/server/CMakeLists.txt
+++ b/libs/server/CMakeLists.txt
@@ -82,6 +82,12 @@ set(SERVER_SOURCES
     configUpdateSyncVisitor.h
     configUpdateVisitor.h
     configVisitor.h
+    config/display.h
+    config/display.cpp
+    config/resources.h
+    config/resources.cpp
+    config/server.h
+    config/server.cpp
     connectionDescription.cpp
     equalizers/dfrEqualizer.cpp
     equalizers/equalizer.cpp
