--- a/libs/fabric/CMakeLists.txt
+++ b/libs/fabric/CMakeLists.txt
@@ -3,10 +3,11 @@
 include(PurpleAddLibrary)
 include(files.cmake)
 
-purple_add_library(eq_fabric ${EQ_LIB_VARIANT}
+purple_add_library(EqualizerFabric SHARED
   HEADERS_PREFIX "eq/fabric/"
   FORWARD HEADERS ${EQ_FABRIC_FORWARD_HEADERS}
   SOURCES ${EQ_FABRIC_SOURCES} ${EQ_FABRIC_HEADERS}
+  LINK_LIBRARIES Collage
   )
 source_group(\\ REGULAR_EXPRESSION .*)
 source_group(\\ FILES CMakeLists.txt)
