--- a/libs/pthreads/CMakeLists.txt
+++ b/libs/pthreads/CMakeLists.txt
@@ -50,7 +50,7 @@ add_library(pthread SHARED
   ${PTHREADS_DIR}/nonportable.c
   )
 
-set_target_properties(pthread PROPERTIES COMPILE_DEFINITIONS PTW32_BUILD=1 FOLDER "Externals")
+set_target_properties(pthread PROPERTIES COMPILE_DEFINITIONS PTW32_BUILD=1 FOLDER "Libraries")
 target_link_libraries(pthread ws2_32)
 
 install(TARGETS pthread
