Fix GLEW compilation
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[x] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/GLEW/CMakeLists.txt
+++ b/libs/GLEW/CMakeLists.txt
@@ -9,7 +9,7 @@ else()
   set(GLEW_DIR ${CMAKE_BINARY_DIR}/glew-${GLEW_VERSION})
   set(GLEW_INCLUDE_DIRS "${OUTPUT_INCLUDE_DIR}/eq")
   set(GLEW_LIBRARY "GLEW_MX-Equalizer")
-  set(GLEW_TGZ ${CMAKE_CURRENT_SOURCE_DIR}/glew-${GLEW_VERSION}.tgz)
+  set(GLEW_TGZ ${CMAKE_CURRENT_SOURCE_DIR}/GLEW/glew-${GLEW_VERSION}.tgz)
 
   if(NOT EXISTS ${GLEW_DIR})
     message(STATUS "  Extracting GLEW to ${GLEW_DIR}")
@@ -27,8 +27,8 @@ else()
 
   set(GLEW_INCLUDES GL/glew.h GL/glxew.h GL/wglew.h)
   foreach(file ${GLEW_INCLUDES})
-    configure_file(${GLEW_INCLUDE_DIRS}/${file} ${OUTPUT_INCLUDE_DIR}/eq/${file} COPYONLY)
-    install(FILES ${GLEW_INCLUDE_DIRS}/${file} DESTINATION include/eq/GL COMPONENT eqdev)
+    configure_file(${GLEW_DIR}/include/${file} ${OUTPUT_INCLUDE_DIR}/eq/${file} COPYONLY)
+    install(FILES ${OUTPUT_INCLUDE_DIR}/eq/${file} DESTINATION include/eq/GL COMPONENT eqdev)
   endforeach()
 
   include_directories(BEFORE SYSTEM ${GLEW_INCLUDE_DIRS})
