Pthreads cmake fix
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[x] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/pthreads/CMakeLists.txt
+++ b/libs/pthreads/CMakeLists.txt
@@ -16,7 +16,7 @@ ENDIF(NOT WIN32)
 message(STATUS "Pthreads-win32 will be built by Equalizer.")
 
 set(PTHREADS_NAME pthreads-w32-2011-03-16)
-set(PTHREADS_TGZ ${CMAKE_CURRENT_SOURCE_DIR}/${PTHREADS_NAME}.tar.gz)
+set(PTHREADS_TGZ ${CMAKE_CURRENT_SOURCE_DIR}/pthreads/${PTHREADS_NAME}.tar.gz)
 set(PTHREADS_DIR ${CMAKE_BINARY_DIR}/${PTHREADS_NAME})
 
 if(NOT EXISTS ${PTHREADS_DIR})
