Port eqHello to Sequel. Programming Guide update pending.
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[x] New Feature
[x] Cleanup
[ ] Optimization
[ ] Documentation

--- a/examples/eqHello/CMakeLists.txt
+++ b/examples/eqHello/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Copyright (c) 2010 Daniel Pfeifer <daniel@pfeifer-mail.de>
+#               2011 Stefan Eilemann <eile@eyescale.ch>
 
 eq_add_example(eqHello
-  SOURCES
-    hello.cpp
+  SOURCES hello.cpp
+  LINK_LIBRARIES ${EQUALIZER_SEQUEL_LIBRARY}
   )
