Rework server::Node to allow for render clients without listening sockets.
Each node has a 'host' field which is used to auto-launch the
node. Render clients which do not need to receive any connections (input
frames or swap barrier master) no longer need a connection - see
2-node.2D.eqc as an example. As a backup, as in previous versions, all
connection hostnames are tried as well.

Bump eqc version to 1.2 and add converter. Converter does set node host
to first hostname found in a connection. Config file doc to follow in a
moment.

#16 to investigate.

[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[x] New Feature
[x] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/eq/server/CMakeLists.txt
+++ b/libs/eq/server/CMakeLists.txt
@@ -89,6 +89,8 @@ set(SERVER_SOURCES
     config/server.h
     config/server.cpp
     connectionDescription.cpp
+    convert11Visitor.h
+    convert12Visitor.h
     equalizers/dfrEqualizer.cpp
     equalizers/equalizer.cpp
     equalizers/framerateEqualizer.cpp
