GL, GLEW, CUDA related CMake cleanups
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/eq/CMakeLists.txt
+++ b/libs/eq/CMakeLists.txt
@@ -1,5 +1,13 @@
 # Copyright (c) 2011 Stefan Eilemann <eile@eyescale.ch>
 
+include_directories(SYSTEM ${OPENGL_INCLUDE_DIR})
+if(GLEW_MX_FOUND)
+  include_directories(SYSTEM ${GLEW_MX_INCLUDE_DIRS})
+endif()
+if(CUDA_FOUND)
+  include_directories(SYSTEM ${CUDA_INCLUDE_DIRS})
+endif()
+
 add_subdirectory(fabric)
 add_subdirectory(client)
 add_subdirectory(admin)
