--- a/libs/GLEW/CMakeLists.txt
+++ b/libs/GLEW/CMakeLists.txt
@@ -2,7 +2,7 @@
 #               2011 Stefan Eilemann <eile@eyescale.ch>
 
 if(GLEW_MX_FOUND)
-  include_directories(BEFORE SYSTEM ${GLEW_MX_INCLUDE_DIR})
+  include_directories(BEFORE SYSTEM ${GLEW_MX_INCLUDE_DIRS})
   set(GLEW_LIBRARY ${GLEW_MX_LIBRARIES})
 else()
   set(GLEW_VERSION 1.6.0)
