--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ include(revision)
 
 set(VERSION_MAJOR "1")
 set(VERSION_MINOR "0")
-set(VERSION_SUB "0")
+set(VERSION_SUB "1")
 if(EQ_REVISION AND NOT EQUALIZER_RELEASE)
   set(VERSION_PATCH ${VERSION_SUB}.${EQ_REVISION})
 else()
@@ -100,7 +100,7 @@ if(OPENMP_FOUND)
   if(CMAKE_COMPILER_IS_GNUCXX AND GCC_COMPILER_VERSION LESS 43 AND NOT EQUALIZER_FORCE_OPENMP)
     message(STATUS "  Disable OpenMP due to bug in gcc ${GCC_COMPILER_VERSION}")
   else()
-    set(EQ_OPENMP_USED 1)
+    set(CO_OPENMP_USED 1)
     set(EQ_FEATURES "${EQ_FEATURES} OpenMP")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
@@ -211,6 +211,7 @@ set(CPACK_STRIP_FILES TRUE)
 set(EQ_DEFINITIONS -DEQ_BUILD_DIR="${CMAKE_BINARY_DIR}/" -DEQ_SOURCE_DIR="${CMAKE_SOURCE_DIR}/")
 if(EQUALIZER_RELEASE)
   set(EQ_DEFINITIONS ${EQ_DEFINITIONS} -DEQ_RELEASE)
+  set(CMAKE_OSX_SYSROOT /Developer/SDKs/MacOSX10.5.sdk CACHE PATH "" FORCE)
   if(IS_ABSOLUTE ${CMAKE_INSTALL_PREFIX})
     set(EQ_DEFINITIONS ${EQ_DEFINITIONS} -DEQ_INSTALL_DIR="${CMAKE_INSTALL_PREFIX}/")
   else()
