--- a/libs/eq/client/CMakeLists.txt
+++ b/libs/eq/client/CMakeLists.txt
@@ -16,13 +16,13 @@ add_definitions(-DEQ_PLUGIN_BUILD)
 if(APPLE)
   if(EQ_AGL_USED)
     find_library(CARBON_LIBRARY Carbon)
-    set(GL_LIBRARIES "${OPENGL_LIBRARIES}")
+    set(GL_LIBRARIES "${OPENGL_gl_LIBRARY}")
   endif(EQ_AGL_USED)
   if(EQ_GLX_USED)
     set(GL_LIBRARIES ${GL_LIBRARIES} GL)
   endif(EQ_GLX_USED)
 else(APPLE)
-  set(GL_LIBRARIES "${OPENGL_LIBRARIES}")
+  set(GL_LIBRARIES "${OPENGL_gl_LIBRARY}")
 endif(APPLE)
 if(NOT CUDA_FOUND)
   set(CUDA_LIBRARIES)
