Fix Darwin build
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[x] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/eq/client/CMakeLists.txt
+++ b/libs/eq/client/CMakeLists.txt
@@ -16,7 +16,7 @@ add_definitions(-DEQ_PLUGIN_BUILD)
 if(APPLE)
   if(EQ_AGL_USED)
     find_library(CARBON_LIBRARY Carbon)
-    set(GL_LIBRARIES "${OPENGL_gl_LIBRARY}")
+    set(GL_LIBRARIES "${OPENGL_LIBRARIES}")
   endif(EQ_AGL_USED)
   if(EQ_GLX_USED)
     set(GL_LIBRARIES ${GL_LIBRARIES} GL)
