Fix Darwin build, stub remote library

--- a/libs/gpusd/local/agl/CMakeLists.txt
+++ b/libs/gpusd/local/agl/CMakeLists.txt
@@ -8,6 +8,9 @@ set(SOURCES
 )
 
 find_library(CARBON_LIBRARY Carbon)
+find_package(OpenGL REQUIRED)
+include_directories(${OPENGL_INCLUDE_DIR})
+
 set(LIBRARY gpusd_local_agl)
 
 # No 64 bit support for AGL
