--- a/libs/gpusd/local/glx/CMakeLists.txt
+++ b/libs/gpusd/local/glx/CMakeLists.txt
@@ -7,9 +7,11 @@ set(SOURCES
   module.cpp
 )
 
+find_package(OpenGL REQUIRED)
+include_directories(SYSTEM ${X11_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} /usr/X11R6/include)
+
 set(LIBRARY gpusd_local_glx)
 
-include_directories(SYSTEM ${X11_INCLUDE_DIR})
 add_library(${LIBRARY} SHARED ${SOURCES})
 target_link_libraries(${LIBRARY} ${CARBON_LIBRARY} ${OPENGL_LIBRARIES} ${X11_LIBRARIES} gpusd_local)
 set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
