--- a/libs/gpusd/remote/CMakeLists.txt
+++ b/libs/gpusd/remote/CMakeLists.txt
@@ -1,21 +1,19 @@
 
 configure_file("version.in.h" "${CMAKE_CURRENT_BINARY_DIR}/version.h" @ONLY)
 
+include_directories(${DNSSD_INCLUDE_DIRS})
+
 set(HEADERS
   "${CMAKE_CURRENT_BINARY_DIR}/version.h"
   api.h
-  gpuInfo.h
-  module.h
 )
 
 set(SOURCES
-  gpuInfo.cpp
-  module.cpp
   version.cpp
 )
 
-set(LIBRARY gpusd_local)
-set(LIB_INCLUDE gpusd${VERSION_MAJOR}/local)
+set(LIBRARY gpusd_remote)
+set(LIB_INCLUDE gpusd${VERSION_MAJOR}/remote)
 
 add_library(${LIBRARY} SHARED ${HEADERS} ${SOURCES})
 set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
@@ -26,6 +24,3 @@ install(TARGETS ${LIBRARY}
   ARCHIVE DESTINATION lib RUNTIME DESTINATION bin LIBRARY DESTINATION lib
   COMPONENT lib)
 install_symlink(${LIB_INCLUDE} ${LIBRARY} include)
-
-add_subdirectory(agl)
-add_subdirectory(glx)
