--- a/libs/gpusd/CMakeLists.txt
+++ b/libs/gpusd/CMakeLists.txt
@@ -3,3 +3,4 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
   ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}${VERSION_MAJOR})
 
 add_subdirectory(local)
+add_subdirectory(remote)
