--- a/libs/gpusd/remote/CMakeLists.txt
+++ b/libs/gpusd/remote/CMakeLists.txt
@@ -1,26 +1,25 @@
 
 configure_file("version.in.h" "${CMAKE_CURRENT_BINARY_DIR}/version.h" @ONLY)
 
-include_directories(${DNSSD_INCLUDE_DIRS})
-
 set(HEADERS
   "${CMAKE_CURRENT_BINARY_DIR}/version.h"
   api.h
+  module.h
 )
 
 set(SOURCES
+  module.cpp
   version.cpp
 )
 
 set(LIBRARY gpusd_remote)
-set(LIB_INCLUDE gpusd${VERSION_MAJOR}/remote)
 
 add_library(${LIBRARY} SHARED ${HEADERS} ${SOURCES})
 set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
   SOVERSION ${VERSION_MAJOR})
 
-install(FILES ${HEADERS} DESTINATION include/${LIB_INCLUDE} COMPONENT dev)
+install(FILES ${HEADERS} DESTINATION include/gpusd${VERSION_MAJOR}/remote
+  COMPONENT dev)
 install(TARGETS ${LIBRARY}
   ARCHIVE DESTINATION lib RUNTIME DESTINATION bin LIBRARY DESTINATION lib
   COMPONENT lib)
-install_symlink(${LIB_INCLUDE} ${LIBRARY} include)
